<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="95dp"
                android:layout_height="140dp"
                android:contentDescription="@string/play_poster"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_android_black_24dp" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/movie_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvshow_season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/season_info"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />

            <TextView
                android:id="@+id/movie_plot"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:text="@string/movie_plot"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/tvshow_season" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/movie_time"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/movie_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/movie_received_from"
                android:layout_width="229dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/movie_received_from"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_time" />

            <android.support.design.button.MaterialButton
                android:id="@+id/movie_play"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/play_btn"
                app:icon="@drawable/ic_play_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>